--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ pandas==2.0.3
 pathspec==0.11.2
 pathtools==0.1.2
 peft==0.6.2
-Pillow=9.4.0
+Pillow==9.4.0
 pkgutil_resolve_name==1.3.10
 prompt-toolkit==3.0.39
 proto-plus==1.22.3
